@@ -1,1 +1,1 @@
-{"version":"5.6-dev","releasedate":"2016-10-16"}
+{"version":"5.6-dev","releasedate":"2016-10-26"}
